syntax = "proto3";

option csharp_namespace = "WinterService";

package zodiac;


service WinterStarSignService {
	rpc WinterStarSignRequest(CalendarDate) returns (StarSignResponse);
}

message CalendarDate {
  string day = 1;
  string month = 2;
  string year = 3;
}

message StarSignResponse {
  StarSign starSign = 1;
}

enum StarSign {
   UNDEFINED = 0;
   VARSATOR = 1;
   PESTI = 2;
   SAGETATOR = 11;
   CAPRICORN = 12;
}
